# engineering_impact

./: .gitignore  PLAN.md  README.md  session-ses_2d9f.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  build_dashboard.py  check_github.py  config.py  fetch_pull_requests.py  github_client.py  main.py  schema.py  scoring.py  utils.py
backend/data/: dashboard.json  dashboard.partial.json  pull_requests.json  pull_requests.partial.json
backend/engineering_impact_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: AreaPills.tsx  EngineerCard.tsx  FocusPanel.tsx  MethodologyFooter.tsx  ScoreBreakdown.tsx  SummaryHeader.tsx
frontend/src/lib/: dashboard.ts
frontend/src/types/: dashboard.ts  index.ts
